src/objects/SMS_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Number__c</fullName>
        <label>From Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Error_Text__c</fullName>
        <label>Send Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Number__c</fullName>
        <label>To Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SMS Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>To_Number__c</columns>
        <columns>From_Number__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{000000}</displayFormat>
        <label>SMS Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>